:bug: try one more time to prevent overflow

--- a/css/partials/prism.css
+++ b/css/partials/prism.css
@@ -9,6 +9,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
 code[class*="language-"],
 pre[class*="language-"] {
   max-width: var(--content-max);
+  overflow: scroll;
   color: black;
   background: none;
   text-shadow: 0 1px white;
